// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App in development mode 1`] = `
<AppContainer>
  <Provider
    store={
      Object {
        "dispatch": [Function],
        "getState": [Function],
        "reducers": Object {
          "helmet": [Function],
          "routing": [Function],
        },
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
  >
    <div>
      <Connect(Component) />
      New Routes
    </div>
  </Provider>
</AppContainer>
`;

exports[`App in production mode 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "reducers": Object {
        "helmet": [Function],
        "routing": [Function],
      },
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <div>
    <Connect(Component) />
    New Routes
  </div>
</Provider>
`;
